[metadata]
name = anidb.py
version = 1.0.0
author = Dean Gardiner
author-email = me@dgardiner.net
summary = Python interface for the AniDB HTTP API
home-page = https://github.com/fuzeman/anidb.py
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Topic :: Software Development :: Libraries
